--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ target/
 .vscode/
 
 target/db-scripts-1.0-SNAPSHOT.jar
+target/db-scripts-1.0-SNAPSHOT.jar
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
